--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.10.8"
+    "mongoose": "^5.10.8",
+    "react-router-dom": "^5.2.0"
   }
 }
