--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "mern",
+  "name": "react-google-books",
   "version": "0.1.0",
   "description": "Mern Demo",
   "private": true,
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://127.0.0.1:3001",
+  "secure": false,
   "dependencies": {
+    "node": "^14.13.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
