--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Mern Demo",
   "private": true,
-  "proxy": "http://127.0.0.1:3001",
+  "proxy": "http://localhost:3001",
   "secure": false,
   "dependencies": {
     "node": "^14.13.0",
