--- a/client/package.json
+++ b/client/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "react-google-books",
+  "name": "google-books-search",
   "version": "0.1.0",
-  "description": "Mern Demo",
+  "description": "Google Books Search",
   "private": true,
-  "proxy": "http://localhost:3001",
-  "secure": false,
+  "proxy": "http://localhost:3001/",
   "dependencies": {
-    "node": "^14.13.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "axios": "^0.19.0",
+    "react": "^16.6.3",
+    "react-bootstrap": "^1.0.0-beta.11",
+    "react-dom": "^16.6.3",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,16 +18,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
